--- a/bower.json
+++ b/bower.json
@@ -11,5 +11,17 @@
     "angular-loader": "~1.5.0",
     "angular-mocks": "~1.5.0",
     "html5-boilerplate": "^5.3.0"
-  }
+  },
+  "authors": [
+    "Matt Lamb <lambmat1@msu.edu>"
+  ],
+  "main": "",
+  "ignore": [
+    "**/.*",
+    "node_modules",
+    "bower_components",
+    "app/bower_components",
+    "test",
+    "tests"
+  ]
 }
